--- a/ScoreKeeperApp/app/src/main/res/values/styles.xml
+++ b/ScoreKeeperApp/app/src/main/res/values/styles.xml
@@ -6,10 +6,25 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorButtonNormal">#000AEE</item>
     </style>
-    <style name="Button">
-        <item name="android:layout_marginBottom">@dimen/line</item>
 
+    <style name="Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/margin</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
+
+    <style name="TextView">
+        <item name="android:layout_margin">@dimen/margin_little</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+
 
 </resources>
